--- a/src/gtk-dialog/Makefile.in
+++ b/src/gtk-dialog/Makefile.in
@@ -58,7 +58,7 @@ am_gtk_logout_helper_OBJECTS =  \
 gtk_logout_helper_OBJECTS = $(am_gtk_logout_helper_OBJECTS)
 am__DEPENDENCIES_1 =
 gtk_logout_helper_DEPENDENCIES = $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
 am__v_lt_0 = --silent
@@ -268,8 +268,8 @@ gtk_logout_helper_SOURCES = \
 	logout-dialog.c \
 	logout-dialog.h
 
-gtk_logout_helper_CFLAGS = $(GTKLOGOUTHELPER_CFLAGS) $(GCONF_CFLAGS) -Wall -Werror
-gtk_logout_helper_LDADD = $(GTKLOGOUTHELPER_LIBS) $(GCONF_LIBS)
+gtk_logout_helper_CFLAGS = $(SESSIONSERVICE_CFLAGS) $(GTKLOGOUTHELPER_CFLAGS) $(GCONF_CFLAGS) -Wall -Werror -DINDICATOR_ICONS_DIR="\"$(INDICATORICONSDIR)\""
+gtk_logout_helper_LDADD = $(SESSIONSERVICE_LIBS) $(GTKLOGOUTHELPER_LIBS) $(GCONF_LIBS)
 all: all-am
 
 .SUFFIXES:
