Import upstream version 0.1.4

--- a/data/icons/scalable/status/Makefile.in
+++ b/data/icons/scalable/status/Makefile.in
@@ -243,7 +243,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 iconsdir = $(INDICATORICONSDIR)/hicolor/scalable/status
 icons_DATA = \
-	user-online.svg			\
+	user-available.svg			\
 	user-offline.svg		\
 	user-away.svg			\
 	user-busy.svg			\
