--- a/data/icons/16x16/status/Makefile.in
+++ b/data/icons/16x16/status/Makefile.in
@@ -243,7 +243,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 iconsdir = $(INDICATORICONSDIR)/hicolor/16x16/status
 icons_DATA = \
-	user-online.png			\
+	user-available.png			\
 	user-offline.png		\
 	user-away.png			\
 	user-busy.png			\
