Import upstream version 0.1.7

--- a/data/icons/22x22/actions/Makefile.in
+++ b/data/icons/22x22/actions/Makefile.in
@@ -243,6 +243,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 iconsdir = $(INDICATORICONSDIR)/hicolor/22x22/actions
 icons_DATA = \
+	system-shutdown-panel.png		\
 	system-shutdown.png		\
 	system-restart.png		\
 	system-log-out.png
