--- a/data/icons/scalable/actions/Makefile.in
+++ b/data/icons/scalable/actions/Makefile.in
@@ -243,6 +243,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 iconsdir = $(INDICATORICONSDIR)/hicolor/scalable/actions
 icons_DATA = \
+	system-shutdown-panel.svg \
 	system-restart.svg \
 	system-log-out.svg \
 	system-shutdown.svg
