--- a/Makefile.in
+++ b/Makefile.in
@@ -267,7 +267,7 @@ SUBDIRS = \
 	data \
 	po
 
-EXTRA_DIST = COPYING.LGPL
+EXTRA_DIST = COPYING.LGPL autogen.sh
 DISTCHECK_CONFIGURE_FLAGS = --enable-localinstall
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
