--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -96,6 +96,7 @@ gtk_logout_helper_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
 am_indicator_session_service_OBJECTS =  \
 	indicator_session_service-lock-helper.$(OBJEXT) \
 	indicator_session_service-session-service.$(OBJEXT) \
+	indicator_session_service-session-dbus.$(OBJEXT) \
 	indicator_session_service-gconf-helper.$(OBJEXT) \
 	indicator_session_service-users-service-dbus.$(OBJEXT) \
 	indicator_session_service-users-service-marshal.$(OBJEXT)
@@ -302,6 +303,7 @@ sessionlibdir = $(INDICATORDIR)
 sessionlib_LTLIBRARIES = libsession.la
 libsession_la_SOURCES = \
 	indicator-session.c \
+	session-dbus-client.h \
 	dbus-shared-names.h \
 	dbusmenu-shared.h \
 	users-service-client.h
@@ -317,6 +319,9 @@ indicator_session_service_SOURCES = \
 	lock-helper.c \
 	lock-helper.h \
 	session-service.c \
+	session-dbus.c \
+	session-dbus.h \
+	session-dbus-server.h \
 	dbusmenu-shared.h \
 	gconf-helper.c \
 	users-service-dbus.h \
@@ -354,12 +359,21 @@ gtk_logout_helper_LDADD = \
 ###############
 BUILT_SOURCES = \
 	consolekit-manager-client.h \
+	consolekit-session-client.h \
+	gdm-local-display-factory-client.h \
+	session-dbus-client.h \
+	session-dbus-server.h \
+	upower-client.h \
 	users-service-client.h \
 	users-service-marshal.h \
 	users-service-marshal.c
 
 EXTRA_DIST = \
 	consolekit-manager.xml \
+	consolekit-session.xml \
+	gdm-local-display-factory.xml \
+	session-dbus.xml \
+	upower.xml \
 	users-service.xml \
 	users-service.list
 
@@ -495,6 +509,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gtk_logout_helper-gtk-logout-helper.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/indicator_session_service-gconf-helper.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/indicator_session_service-lock-helper.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/indicator_session_service-session-dbus.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/indicator_session_service-session-service.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/indicator_session_service-users-service-dbus.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/indicator_session_service-users-service-marshal.Po@am__quote@
@@ -611,6 +626,22 @@ indicator_session_service-session-service.obj: session-service.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='session-service.c' object='indicator_session_service-session-service.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(indicator_session_service_CFLAGS) $(CFLAGS) -c -o indicator_session_service-session-service.obj `if test -f 'session-service.c'; then $(CYGPATH_W) 'session-service.c'; else $(CYGPATH_W) '$(srcdir)/session-service.c'; fi`
+
+indicator_session_service-session-dbus.o: session-dbus.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(indicator_session_service_CFLAGS) $(CFLAGS) -MT indicator_session_service-session-dbus.o -MD -MP -MF $(DEPDIR)/indicator_session_service-session-dbus.Tpo -c -o indicator_session_service-session-dbus.o `test -f 'session-dbus.c' || echo '$(srcdir)/'`session-dbus.c
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/indicator_session_service-session-dbus.Tpo $(DEPDIR)/indicator_session_service-session-dbus.Po
+@am__fastdepCC_FALSE@	$(AM_V_CC) @AM_BACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='session-dbus.c' object='indicator_session_service-session-dbus.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(indicator_session_service_CFLAGS) $(CFLAGS) -c -o indicator_session_service-session-dbus.o `test -f 'session-dbus.c' || echo '$(srcdir)/'`session-dbus.c
+
+indicator_session_service-session-dbus.obj: session-dbus.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(indicator_session_service_CFLAGS) $(CFLAGS) -MT indicator_session_service-session-dbus.obj -MD -MP -MF $(DEPDIR)/indicator_session_service-session-dbus.Tpo -c -o indicator_session_service-session-dbus.obj `if test -f 'session-dbus.c'; then $(CYGPATH_W) 'session-dbus.c'; else $(CYGPATH_W) '$(srcdir)/session-dbus.c'; fi`
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/indicator_session_service-session-dbus.Tpo $(DEPDIR)/indicator_session_service-session-dbus.Po
+@am__fastdepCC_FALSE@	$(AM_V_CC) @AM_BACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='session-dbus.c' object='indicator_session_service-session-dbus.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(indicator_session_service_CFLAGS) $(CFLAGS) -c -o indicator_session_service-session-dbus.obj `if test -f 'session-dbus.c'; then $(CYGPATH_W) 'session-dbus.c'; else $(CYGPATH_W) '$(srcdir)/session-dbus.c'; fi`
 
 indicator_session_service-gconf-helper.o: gconf-helper.c
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(indicator_session_service_CFLAGS) $(CFLAGS) -MT indicator_session_service-gconf-helper.o -MD -MP -MF $(DEPDIR)/indicator_session_service-gconf-helper.Tpo -c -o indicator_session_service-gconf-helper.o `test -f 'gconf-helper.c' || echo '$(srcdir)/'`gconf-helper.c
@@ -882,12 +913,47 @@ consolekit-manager-client.h: $(srcdir)/consolekit-manager.xml
 		--output=consolekit-manager-client.h \
 		$(srcdir)/consolekit-manager.xml
 
+consolekit-session-client.h: $(srcdir)/consolekit-session.xml
+	dbus-binding-tool \
+		--prefix=_consolekit_session_client \
+		--mode=glib-client \
+		--output=consolekit-session-client.h \
+		$(srcdir)/consolekit-session.xml
+
+gdm-local-display-factory-client.h: $(srcdir)/gdm-local-display-factory.xml
+	dbus-binding-tool \
+		--prefix=_gdm_local_display_factory_client \
+		--mode=glib-client \
+		--output=gdm-local-display-factory-client.h \
+		$(srcdir)/gdm-local-display-factory.xml
+
 users-service-client.h: $(srcdir)/users-service.xml
 	dbus-binding-tool \
 		--prefix=_users_service_client \
 		--mode=glib-client \
 		--output=users-service-client.h \
 		$(srcdir)/users-service.xml
+
+upower-client.h: $(srcdir)/upower.xml
+	dbus-binding-tool \
+		--prefix=_upower_client \
+		--mode=glib-client \
+		--output=upower-client.h \
+		$(srcdir)/upower.xml
+
+session-dbus-client.h: $(srcdir)/session-dbus.xml
+	dbus-binding-tool \
+		--prefix=_session_dbus_client \
+		--mode=glib-client \
+		--output=session-dbus-client.h \
+		$(srcdir)/session-dbus.xml
+
+session-dbus-server.h: $(srcdir)/session-dbus.xml
+	dbus-binding-tool \
+		--prefix=_session_dbus_server \
+		--mode=glib-server \
+		--output=session-dbus-server.h \
+		$(srcdir)/session-dbus.xml
 
 users-service-marshal.h: $(srcdir)/users-service.list
 	glib-genmarshal --header \
