Added missing dependencies on xfce4-session (for xfce4-session-logout) and xfce4-utils (for xflock4) introduced by our patches.

--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Vcs-Browser: http://bazaar.launchpad.net/~ubuntu-desktop/indicator-session/ubunt
 
 Package: indicator-session
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, upower
+Depends: ${shlibs:Depends}, ${misc:Depends}, upower, xfce4-session, xfce4-utils
 Recommends: indicator-applet (>= 0.2) | indicator-renderer
 Suggests: gdm
 Conflicts: gdm (<= 2.27.4-0ubuntu9), indicator-sus
